force-app/main/default/objects/Chat_Topic__c/Chat_Topic__c.object-meta.xml
<CustomObject>
    <description>This will be used to cache Twilio Channel information in Salesforce. 
The intention is to use this cached Channel info (e.g. ID) to view/fetch chat transcripts in the future.</description>
    <label>Chat Topic</label>
    <nameField>
        <label>Chat Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>