force-app/main/default/objects/Chat_Topic__c/fields/Currently_Active__c.field-meta.xml
<CustomField>
    <fullName>Currently_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This would be Checked if a particular Chat Topic is currently active. This means a Coach is currently having a chat conversation with the customer related to this particular Chat Topic.</description>
    <inlineHelpText>This means a Coach is currently having a chat conversation with the Customer related to this particular Chat Topic.</inlineHelpText>
    <label>Currently Active</label>
    <type>Checkbox</type>
</CustomField>