force-app/main/default/objects/Chat_Topic__c/fields/Related_Customer__c.field-meta.xml
<CustomField>
    <fullName>Related_Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Twilio</complianceGroup>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Link to the related customer record</description>
    <label>Related Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chat Topics</relationshipLabel>
    <relationshipName>Chat_Topics</relationshipName>
    <type>Lookup</type>
</CustomField>