force-app/main/default/objects/Chat_Topic__c/fields/Twilio_Channel_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Channel_SID__c</fullName>
    <description>The SID of the Twilio Channel resource. This value can be either the sid or the unique_name of the Channel resource.</description>
    <label>Twilio Channel SID</label>
    <length>34</length>
    <required>true</required>
    <type>Text</type>
</CustomField>